<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<!--parent -->
	<parent>
		<groupId>mybatis-jpa-extra</groupId>
		<artifactId>mybatis-jpa-extra-parent</artifactId>
		<version>${mybatis.jpa.extra.version}</version>
	</parent>
	
	<!--self -->
	<artifactId>mybatis-jpa-extra</artifactId>
	<name>mybatis-jpa-extra</name>
	<description>mybatis-jpa-extra</description>
	<url>https://github.com/MaxKeyTop/mybatis-jpa-extra</url>

	<dependencies>

	</dependencies>
	
	<build>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<encoding>utf8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>